--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,113 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   /* background-image:url(bgTheme.jpg) */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  max-width: 300px;
+  overflow: auto;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.logo{
+  width:150px;
+  height:80px; 
+  /* box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+border-radius: 10%;
+}
+/********** AddCustomer Section ***********/
+.btn {
+  display: inline-block;
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 20px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.btn-primary {
+  height: 40px;
+  display: block;
+  width: 100%;
+}
+
+.add-form {
+  margin-bottom: 40px;
+}
+
+.form-control {
+  margin: 20px 0;
+  background-image: url(bgTheme.jpg);
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+/****** View All Customers Section and Transaction History******/
+
+/* .viewCustomers{
+  background-image: url(bgTheme.jpg);
+  align-items: center;
+} */
+table, th, td {
+  border: 1px solid #16076d;
+}
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+tr:hover {background-color: #cfe2f1;}
+tr:nth-child(even) {background-color: #1f4766;
+color: white;}
+th {
+  background-color: #16076d;
+  color: white;
+}
+
+.content{
+  padding: 100px 500px;
+  justify-content: center;
+  background-image: url(bgTheme.jpg);
+}
+
+/******** About Section *******/
+
+.contentabt{
+  height: 350px;
+  margin-top: 25px;
+  border-bottom: 3px solid #222;
+  background-color: rgb(139, 204, 241);
+  padding-left: 50px;
+  justify-content: center;
+  display: inline-flexbox;
+}
+
+#about{
+  text-align: center;
+}
+
+.count{
+  column-count: 2;
+  column-gap: 50px;
 }
