--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body{
     height:80px; 
     /* box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   border-radius: 10%;
+  margin-left: 50px;
   }
   
   /*******Meni-links*******/
